# Eyeris

./: README.md
.github/workflows/: deploy-web.yml  tauri-build.yml
Android/: README.md
Tauri/: .gitignore  package-lock.json  package.json
Tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri/src-tauri/icons/: icon.icns
Tauri/src-tauri/src/: main.rs
Web/: contact.html  downloads-loader.js  downloads.html  home.html  index.html  script.js  spa-router.js  styles.css  sw.js  tauri-links.js  troubleshooting.html  worker.js
