[package]
name = "eyeris"
version = "1.0.0"
description = "Eye Health Monitor - Protect your eyes from screen strain"
authors = ["imnexerio"]
license = "MIT"
repository = "https://github.com/imnexerio/Eyeris"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eyeris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4" }
tauri-plugin-log = "2"
